Expand Rogue NPC boon pools and reward helpers
- Add and consolidate Tyvar, Narset, and Henzie NPC boon effects, including paired carry-card rewards, land-start traits, Narset chaos items, and Henzie chest-trait/mythic rewards.
- Centralize NPC-owned effect selection, availability filtering, and randomized boon monologues across NPC encounters.
- Add RogueEffect helpers for explicit carry-card grants, strict carry-card availability checks, and direct reward-pool card additions.
- Improve run-start UI handling with NPC reward result dialogs and run-aware View Deck support in card selection dialogs.
- Update Rogue card scripts and previews for renamed land traits, Master Chef, Well Connected optional choices, Wrath of Chaos, Corrupted Powerstone, and Narset’s capsule package.
- Tighten Rogue card sourcing by excluding funny/playtest editions and normalizing alias/flavor-name prints for selection effects.
- Adjust related content by pruning unused Rogue events and making Grand Ossuary AI prefer Main 1 planar die rolls.